# fastapi-test

./: README.md  pyproject.toml
pyapi/: main.py
